cmake_minimum_required(VERSION 3.28)
project(exercicioValoresReferencia)

set(CMAKE_CXX_STANDARD 17)

add_executable(exercicioValoresReferencia main.cpp
        exercicio01.cpp
        exercicio02.cpp
        exercicio03.cpp
        exercicio04.h
        exercicio04.cpp
        exercicio05.cpp
        exercicio05.h
        exercicio06.cpp
        exercicio06.h
        exercicio07.cpp
        exercicio07.h)
